--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: #111;
+  color: #ffffff;
+}
+
+h1{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  color: #ffffff;
+  height: 40px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.mainHeading{
+  font-size: 5vmin;
+  margin: 5vmin;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+form{
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  margin: auto;
+  font-size: 3vmin;
+  background-color: #f06;
+  border-radius: 20px;
+  padding: 2vmin;
+}
+
+form h3{
+  text-align: center;
+  font-size: 30px;
+}
+
+input{
+  height: 30px;
+  width: 100%;
+  padding-left: 10px;
+  border-radius: 10px;
+}
+
+.todoSubmitBtn{
+  margin: auto;
+ height: 5vmin;
+ width: 25vmin;
+ border-radius: 20px;
+ background-color: rgb(90, 90, 255);
+ color: #ffffff;
+ font-size: 2.5vmin;
+}
+
+.box{
+  display: inline-block;
+  border: 5px solid transparent;
+  margin: 3.5vmin;
+  border-image: linear-gradient(45deg, #f06, green) 1;
+  overflow: hidden;
+  background-color: black;
+}
+
+.box:hover{
+  box-shadow: 0px 5px 10px gray;
+}
+
+.card{
+  height: 65vmin;
+  width: 46vmin;
+  text-align: center;
+  color: #ffffff;
+  background-color: #f06;
+  border: none;
+}
+
+.imgBox{
+  height: 82%;
+  overflow: hidden;
+}
+
+.infoBox{
+  padding: 0px 5px;
+  border: none;
+}
+
+.infoBox h4{
+  font-size: 3.2vmin;
+}
+.infoBox p{
+  font-size: 2vmin;
+}
+
+img{
+  max-height: 100%;
+}
+
+.card h4{
+}
+
+.deleteBtn{
+  height: 3.3vmin;
+  width: 15vmin;
+  border: none;
+  border-radius: 10px;
+  background-color: #fff;
+  font-size: 2.3vmin;
+  color: #f06;
+  margin: 5px;
 }
