--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,29 @@ input {
   margin-bottom: 3vmin;
 }
 
+
+
+
+@media (max-width: 850px){
+  input {
+    padding: 7px;
+    min-width: 50vw;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+    border: none;
+    border-bottom: 0.2rem solid #15133c;
+    outline: none;
+    margin-bottom: 6vmin;
+  }
+
+  .stories-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
+
+  .card{
+    width: 90%;
+  }
+}
